# gem2_state_publisher

./: CMakeLists.txt  README.md  package.xml
config/: params_cogimon.yaml  params_nao.yaml  params_talos.yaml  params_talos_real.yaml
include/gem2_state_publisher/: JointDF.h  Madgwick.h  Mahony.h  MovingAverageFilter.h  Queue.h  butterworthHPF.h  butterworthLPF.h  differentiator.h  gem2_state_publisher.h  robotDyn.h
launch/: gem2_state_publisher_cogimon.launch  gem2_state_publisher_nao.launch  gem2_state_publisher_talos.launch  gem2_state_publisher_talos_real.launch
src/: JointDF.cpp  MovingAverageFilter.cpp  butterworthHPF.cpp  butterworthLPF.cpp  differentiator.cpp  gem2_state_publisher.cpp  gem2_state_publisher_driver.cpp
